--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,12 @@
   </head>
 
   <body>
+    <div id="scroll-animate">
+      <div id="scroll-animate-main">
+        <div class="wrapper-parallax">
     <%= yield %>
-
+     </div>
+  </div>
+</div>  
   </body>
 </html>
