--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,33 +1,12 @@
 <footer>
-    <ul>
-        <li>
-            <p> <%= link_to "Home", polaroids_url, class: "home" %> </p>
-            <a class="logo" href="#">Coding with &hearts; <i>&copy; 2018</i></a>
-        </li>
-        <li>
-            <p class="services">Tech</p>
-
-            <ul>
-                <li><a href="#">Rails</a></li>
-                <li><a href="#">React</a></li>
-                <li><a href="#">Django</a></li>
-            </ul>
-        </li>
-        <li>
-            <p class="reachus">Reach ME</p>
-
-            <ul>
-               <li> <%= link_to fa_icon('github', size:'2em'), "https://github.com/wandersonsc" %></li>
-               <li> <%= link_to fa_icon('twitter', size:'2em'), "https://twitter.com/wandersondsc" %></li>
-               <li> <%= link_to fa_icon('codepen', size:'2em'), "https://codepen.io/Wandersonsc/" %></li>
-            </ul>
-        </li>
-        <li>
-            <p class="clients">Clients</p>
-
-            <ul>
-           
-            </ul>
-        </li>
-    </ul>
+	<div class="footer-container">
+	    <ul>
+	        <li><%= link_to fa_icon('github'), "https://github.com/wandersonsc" %></li>
+	       <li> <%= link_to fa_icon('twitter'), "https://twitter.com/wandersondsc" %></li>
+	       <li> <%= link_to fa_icon('codepen'), "https://codepen.io/Wandersonsc/" %></li>
+	    </ul>
+    </div>    
 </footer>
+
+
+
