--- a/app/views/layouts/polaroid.html.erb
+++ b/app/views/layouts/polaroid.html.erb
@@ -11,15 +11,18 @@
   </head>
 
   <body>
-    <div class="wrapper">
+    <div id="container">
+      <div class="main">
 
        <%= yield %>
+        
+      </div>
 
-         
-  
     </div>
     <!-- Footer will go here  -->
-    <%= render "shared/footer" %>
-  
+    
+    <footer class="footer-container"">
+      <%= render "shared/footer" %>
+    </footer> 
   </body>
 </html>
