--- a/app/views/layouts/polaroid.html.erb
+++ b/app/views/layouts/polaroid.html.erb
@@ -11,6 +11,11 @@
   </head>
 
   <body>
+    <!-- Nav will go here  -->
+    <nav>
+      <%= render 'shared/nav'%>
+    </nav>
+    <!-- Body will go here  -->
     <div id="container">
       <div class="main">
 
